@@ -26,6 +26,9 @@ enable_flash = true
 ; Enable or disable texts.
 enable_text = true
 
+; Display the SDLPoP information screen when the game starts.
+enable_info_screen = true;
+
 ; Start the game in fullscreen mode. (In-game fullscreen toggle: Alt+Enter)
 start_fullscreen = false
 
